2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* preinstall.am: Regenerated.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove noinst_PROGRAMS (Unused).

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Use standardized bsp_cleanup() which can optionally
	print a message, poll for user to press key, and call bsp_reset().
	Using this eliminates the various bsp_cleanup() implementations which
	had their own implementation and variety of string constants.

2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, include/bsp.h, startup/bspstart.c: Use PowerPC level
	shared bsp_get_work_area() implementation.
	* startup/bspgetworkarea.c: Removed.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspstart.c: Remove unnecessary includes of
	rtems/libcsupport.h and rtems/libio.h.

2008-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, console/rsPMCQ1.h, include/bsp.h,
	startup/bspstart.c: Create bsp_get_work_area() into its own file and
	use BSP Framework to perform more initialization.
	* startup/bspgetworkarea.c: New file.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>
